--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,13 @@ edition = "2018"
 [dependencies]
 image = "0.23"
 winit = "0.22"
-#shaderc = "0.7"
 cgmath = "0.17"
 env_logger = "0.7"
 log = "0.4"
 wgpu = "0.7"
 futures = "0.3"
+bytemuck = { version = "1.4", features = [ "derive" ] }
+anyhow = "1.0"
 
 [build-dependencies]
 anyhow = "1.0"
